--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>MERN-PROJECT</title>
   </head>
   <body>
     <noscript> </noscript>
