feat(alert): 更新外觀和跳轉時間

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,11 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <title>MERN-PROJECT</title> 
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/2.4.2/uicons-bold-rounded/css/uicons-bold-rounded.css"
+    />
+    <title>MERN-PROJECT</title>
   </head>
   <body>
     <noscript> </noscript>
