perf(lcp): switch banner to WebP with <picture> (PNG fallback) + preload webp; keep explicit dimensions

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,8 +25,8 @@
     <link
       rel="preload"
       as="image"
-      href="/assets/banner.png"
-      imagesrcset="/assets/banner-s.png 640w, /assets/banner.png 1280w"
+      href="/assets/banner.webp"
+      imagesrcset="/assets/banner-s.webp 640w, /assets/banner.webp 1280w"
       imagesizes="100vw"
     />
 
